--- a/src/main/resources/assets/randomfood/lang/en_US.lang
+++ b/src/main/resources/assets/randomfood/lang/en_US.lang
@@ -1,3 +1,19 @@
 item.randomfood.ironblade.name=Iron Blade
 item.randomfood.goldblade.name=Gold Blade
 item.randomfood.diamondblade.name=Diamond Blade
+item.randomfood.blackironknife.name=Iron Knife (Black)
+item.randomfood.blueironknife.name=Iron Knife (Blue)
+item.randomfood.brownironknife.name=Iron Knife (Brown)
+item.randomfood.cyanironknife.name=Iron Knife (Cyan)
+item.randomfood.grayironknife.name=Iron Knife (Gray)
+item.randomfood.greenironknife.name=Iron Knife (Green)
+item.randomfood.lightblueironknife.name=Iron Knife (Light Blue)
+item.randomfood.limeironknife.name=Iron Knife (Lime)
+item.randomfood.magentaironknife.name=Iron Knife (Magenta)
+item.randomfood.orangeironknife.name=Iron Knife (Orange)
+item.randomfood.pinkironknife.name=Iron Knife (Pink)
+item.randomfood.purpleironknife.name=Iron Knife (Purple)
+item.randomfood.redironknife.name=Iron Knife (Red)
+item.randomfood.silverironknife.name=Iron Knife (Silver)
+item.randomfood.whiteironknife.name=Iron Knife (White)
+item.randomfood.yellowironknife.name=Iron Knife (Yellow)
