--- a/src/main/resources/assets/randomfood/lang/en_US.lang
+++ b/src/main/resources/assets/randomfood/lang/en_US.lang
@@ -33,3 +33,35 @@ item.randomfood.redhandle.name=Handle (Red)
 item.randomfood.silverhandle.name=Handle (Silver)
 item.randomfood.whitehandle.name=Handle (White)
 item.randomfood.yellowhandle.name=Handle (Yellow)
+item.randomfood.blackgoldknife.name=Gold Knife (Black)
+item.randomfood.bluegoldknife.name=Gold Knife (Blue)
+item.randomfood.browngoldknife.name=Gold Knife (Brown)
+item.randomfood.cyangoldknife.name=Gold Knife (Cyan)
+item.randomfood.graygoldknife.name=Gold Knife (Gray)
+item.randomfood.greengoldknife.name=Gold Knife (Green)
+item.randomfood.lightbluegoldknife.name=Gold Knife (Light Blue)
+item.randomfood.limegoldknife.name=Gold Knife (Lime)
+item.randomfood.magentagoldknife.name=Gold Knife (Magenta)
+item.randomfood.orangegoldknife.name=Gold Knife (Orange)
+item.randomfood.pinkgoldknife.name=Gold Knife (Pink)
+item.randomfood.purplegoldknife.name=Gold Knife (Purple)
+item.randomfood.redgoldknife.name=Gold Knife (Red)
+item.randomfood.silvergoldknife.name=Gold Knife (Silver)
+item.randomfood.whitegoldknife.name=Gold Knife (White)
+item.randomfood.yellowgoldknife.name=Gold Knife (Yellow)
+item.randomfood.blackdiamondknife.name=Diamond knife (Black)
+item.randomfood.bluediamondknife.name=Diamond knife (Blue)
+item.randomfood.browndiamondknife.name=Diamond knife (Brown)
+item.randomfood.cyandiamondknife.name=Diamond knife (Cyan)
+item.randomfood.graydiamondknife.name=Diamond knife (Gray)
+item.randomfood.greendiamondknife.name=Diamond knife (Green)
+item.randomfood.lightbluediamondknife.name=Diamond knife (Light Blue)
+item.randomfood.limediamondknife.name=Diamond knife (Lime)
+item.randomfood.magentadiamondknife.name=Diamond knife (Magenta)
+item.randomfood.orangediamondknife.name=Diamond knife (Orange)
+item.randomfood.pinkdiamondknife.name=Diamond knife (Pink)
+item.randomfood.purplediamondknife.name=Diamond knife (Purple)
+item.randomfood.reddiamondknife.name=Diamond knife (Red)
+item.randomfood.silverdiamondknife.name=Diamond knife (Silver)
+item.randomfood.whitediamondknife.name=Diamond knife (White)
+item.randomfood.yellowdiamondknife.name=Diamond knife (Yellow)
